# entity_addict

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  pythonpackage.yml
entity_addict/: __init__.py  entity.py
entity_addict/test/: test_entity.py
