[tool.poetry]
name = "entity_addict"
version = "1.1.0"
description = "An extended version of [addict](https://github.com/mewwts/addict)."
authors = ["longhao <hal.long@outlook.com>"]
license = "MIT"
homepage = "https://github.com/loonghao/entity_addict"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.6.1"
addict = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
pytest = "^5.0"
flake8 = "^3.6"
pytest-cov = "^2.6"
codecov = "^2.0"
mypy = "^0.770"
isort = "^5.7.0"
pydocstyle = "^5.0.2"
pre-commit = "^2.6.0"
tox = "^3.23.1"


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.0"
tag_format = "v$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
version_files = [
    "pyproject.toml:version",
    "entity_addict/__version__.py"
]

[tool.isort]
profile = "black"
known_first_party = ["entity_addict", "test"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
